# OrbiTI

./: .gitignore  database.db  database.db-journal  docker-compose.yml  dockerfile  main.py  package-lock.json  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 41b47091a4cb_iniciando_banco.py  459b3d4929ee_add_campo_token_na_tabela_usuario.py  766dc3aec7ed_create_enderecos_table.py  88a6a5e01220_add_campo_diretorio_img_na_tabela_.py  dbdad3b53c57_create_fornecedores_table_relationship_.py  dbe55830acfd_create_table_categoria_permissao_.py  e9ba22b27977_create_table_local.py  ed6f2070594f_modificando_o_campo_email_da_tabela_.py  ef4ce7a7a31c_adicionando_coluna_para_diretorio_de_.py
public/static/css/: login.css
public/templates/: login.html
src/: app.py
src/public/templates/: base.html  endereco.html  index.html  login.html  menu-main.html  menu.html
src/repository/: CategoriaRepo.py  FornecedorRepo.py  LocalRepo.py  ProdutoRepo.py  UsuarioRepo.py
src/routers/: endereco_router.py  routerPage.py  web_routes.py
src/routers/categoria/: router_categoria.py
src/routers/estoque/: router_estoque.py
src/routers/fornecedor/: router_fornecedor.py
src/routers/login/: router_login.py
src/routers/menu/: router_menu.py
src/routers/produto/: router_produto.py
src/schemas/: CategoriaSchema.py  EnderecoSchema.py  FornecedorSchema.py  LocalSchema.py  PermissaoUsuarioSchema.py  ProdutoSchema.py  UsuarioSchema.py
src/sql/config/: database.py
src/tests/: conftest.py  test_db.py
src/util/: init_user.py  mensagem.py  security.py
(+93 files in other folders)
