[tool.poetry]
name = "orbiti"
version = "0.1.0"
description = ""
authors = ["MuriloRohor <murilo.marquezini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.6.0"
anyio = "3.7.1"
click = "8.1.7"
colorama = "0.4.6"
fastapi = "0.104.1"
greenlet = "3.0.1"
h11 = "0.14.0"
idna = "3.4"
jinja2 = "3.1.2"
markupsafe = "2.1.3"
pydantic = "2.4.2"
pydantic-core = "2.10.1"
python-multipart = "0.0.6"
sniffio = "1.3.0"
sqlalchemy = "2.0.22"
starlette = "0.27.0"
typing-extensions = "4.8.0"
uvicorn = "0.23.2"
pydantic-settings = "^2.1.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
